Revert "Had to simplify the transitions to keep the elements from jumping around. The issue was with the absolute and relative elements."
This reverts commit 65df678122ae6f860a0f2f5e7cb7f1c22c105f18.

--- a/css/transition.css
+++ b/css/transition.css
@@ -1,23 +1,48 @@
-[ui-view].ng-enter{
-	-webkit-transition:all 1s ease-in-out;
-	transition:all 1s ease-in-out;
-}
-
-[ui-view].ng-leave {
-	-webkit-transition:all 0s ease-in-out;
-	transition:all 0s ease-in-out;
+[ui-view] {
+	height: 100%;
 }
 
 [ui-view].ng-enter {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	-webkit-transition: all .6s ease-in-out;
+	-moz-transition: all .6s ease-in-out;
+	-o-transition: all .6s ease-in-out;
+	transition: all .6s ease-in-out;
+}
+
+ [ui-view].ng-leave {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+}
+
+
+[ui-view].ng-enter {
 	opacity: 0;
+	
+	-webkit-transform: scale3d(0.5, 0.5, 0.5);
+	-moz-transform: scale3d(0.5, 0.5, 0.5);
+	transform: scale3d(0.5, 0.5, 0.5);
+	
 }
 
 [ui-view].ng-enter-active {
 	opacity: 1;
-}
-
-[ui-view].ng-leave {
-	opacity: 1;
+	
+	-webkit-transform: scale3d(1, 1, 1);
+	-moz-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
+	
 }
 
 [ui-view].ng-leave-active {
